--- a/index.html
+++ b/index.html
@@ -98,3 +98,156 @@ Função: Cada <li> representa um item na lista não ordenada <ul>. -->
             <article id="home_texto">
                 <h4>Bem-vindo ao Novo Universo</h4>
                 <h1>Mundos diferentes para pessoas diferentes</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod error veniam in voluptatem magni
+                    quisquam</p>
+                <a target="_blank" href="https://github.com/conteudoGeneration" alt="Github da Generation Brasil">
+            </article>
+            <article id="home_imagem">
+                <img src="./assets/img/astronauta.svg" alt="Capacete de Astronauta Animado" width="300">
+            </article>
+        </section>
+        <!--Definição: Tag semântica que define o conteúdo principal da página.
+Função: Destina-se ao conteúdo central, que é diretamente relacionado ao propósito principal do documento. Melhora a acessibilidade ao destacar o conteúdo essencial para leitores de tela.
+
+<section>:
+Definição: Tag semântica usada para agrupar conteúdo tematicamente relacionado.
+Função: Ajuda a organizar o conteúdo em seções lógicas e coesas. Cada <section> deve idealmente ter um título próprio e pode conter uma variedade de elementos HTML.
+
+    <article>:
+Definição: Representa uma composição independente dentro de um documento.
+Função: Cada <article> pode ser lido de forma independente e pode incluir títulos, parágrafos, imagens, etc. Usado para conteúdos que fazem sentido por si só, como artigos de blog, notícias, etc.
+
+    <h1>, <h4>:
+Definição: Tags de cabeçalho que definem os níveis de títulos.
+Função: <h1> é o título principal e mais importante da página ou seção. <h4> é um subtítulo de menor importância. A hierarquia dos cabeçalhos (<h1> a <h6>) deve ser mantida para garantir boa estrutura e acessibilidade.
+
+    <p>:
+Definição: Tag de parágrafo, usada para incluir textos em blocos.
+Função: Agrupa texto dentro de um bloco. É a maneira mais comum de exibir texto corrido.
+
+<img src="" alt="" width="">:
+Definição: Tag de imagem.
+Função: Exibe uma imagem no documento.
+Atributos:
+src: Especifica o caminho para a imagem.
+alt: Texto alternativo que é exibido se a imagem não carregar. Também é lido por leitores de tela para descrever a imagem para pessoas com deficiência visual.
+width: Define a largura da imagem em pixels.
+
+<a target="_blank" href="https://github.com/conteudoGeneration" alt="Github da Generation Brasil">:
+Definição: Um link que aponta para uma URL externa.
+Função:
+O atributo target="_blank" faz com que o link seja aberto em uma nova aba.
+href é o destino do link.
+alt fornece um texto alternativo para o link.  -->
+
+
+        <section id="about">
+
+            <img src="assets/img/user_01.svg" alt="Foto do Perfil do Github" width="450px">
+
+
+            <article id="sobre_texto">
+
+                <h1>Sobre mim</h1>
+
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    Quibusdam odit voluptates incidunt inventore rem error harum
+                    blanditiis accusamus vitae, minus fugit consequatur?
+                    Dolorum maiores magni deleniti modi sit laudantium totam!
+                </p>
+
+                <div id="sobre_github">
+
+                    <a target="_blank" href="https://github.com/conteudoGeneration">Github</a>
+                    <p>200 Seguidores</p>
+                    <p>100 Repositórios</p>
+
+                </div>
+
+            </article>
+
+        </section>
+
+        <!--  -->
+
+        <section id="contact">
+
+            <article id="redes_sociais">
+
+                <h4>Contate-me</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Quod error veniam in voluptatem magni quisquam</p>
+
+                <div id="icones_redes_sociais">
+                    <a href="">
+                        <img src="" alt="" width="">:
+                        <img src="assets/img/linkedin.svg" alt="LinkedIn" />
+                    </a>
+                    <a href="">
+                        <img src="assets/img/github.svg" alt="Github" />
+                    </a>
+                    <a href="">
+                        <img src="assets/img/instagram.svg" alt="Instagram" />
+                    </a>
+                </div>
+
+            </article>
+            <form action="" method="POST">
+
+
+                <label for="name">Nome: </label>
+                <input id="name" type="text" name="name" placeholder="Digite seu nome">
+                <span id="txtNome"></span>
+
+                <label for="email">E-mail: </label>
+                <input id="email" type="text" name="email" placeholder="Digite seu email">
+                <span id="txtEmail"></span>
+
+                <label for="subject">Assunto: </label>
+                <input id="subject" type="text" name="subject" placeholder="Digite o título da message">
+                <span id="txtSubject"></span>
+
+                <label for="message">Mensagem: </label>
+                <textarea id="message" name="message" placeholder="Digite sua message"></textarea>
+
+                <button type="submit">Enviar</button>
+            </form>
+        </section>
+        <!-- Definição: Define uma seção específica dedicada ao contato e redes sociais.
+Função: Organiza o conteúdo relacionado ao contato em uma área distinta da página.
+
+<form action="" method="POST">:
+Definição: Tag usada para criar um formulário.
+Função:
+action: Especifica a URL para onde os dados do formulário serão enviados ao ser submetido.
+method: Define o método HTTP para envio dos dados, onde POST envia os dados de forma mais segura, em comparação com GET.
+
+<label for="">:
+Definição: Rótulo associado a um elemento de formulário, como uma caixa de texto.
+Função: O atributo for associa o rótulo a um elemento específico pelo seu id, facilitando a navegação para usuários de leitores de tela.
+
+<input id="" type="" name="" placeholder="">:
+Definição: Campo de entrada de dados para formulários.
+Função:
+type: Define o tipo de entrada (texto, e-mail, etc.).
+id: Identificador único para o campo.
+name: Nome do campo, que será usado na submissão dos dados.
+placeholder: Texto de preenchimento que aparece dentro do campo antes de o usuário começar a digitar.
+
+<textarea id="" name="" placeholder="">:
+Definição: Área de texto para entradas de múltiplas linhas.
+Função: Usada para capturar mensagens ou comentários mais longos.
+
+<button type="submit">Enviar</button>:
+Definição: Botão usado para enviar o formulário.
+Função: Ao ser clicado, o formulário é enviado para o destino especificado no atributo action. -->
+
+
+    </main>
+
+
+
+</body>
+
+</html>
