--- a/sucess.html
+++ b/sucess.html
@@ -1,55 +1,36 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Projeto Portfólio">
-    <meta name="author" content="Generation Brasil">
+    <meta name="author" content="Luiz Ribeiro">
     <meta name="keywords" content="HTML, CSS, JavaScript">
     <link rel="icon" href="./assets/img/favicon.svg" />
-
+    <link rel="stylesheet" href="./assets/css/style.css">
     <title>Universe</title>
 </head>
 
 <body>
-    <!-- Cabeçalho da Página (header) -->
-    <header>
-
-        <!-- Div Conteudo do Cabeçalho -->
-        <div id="header_content">
-
-             <!-- Conteúdo do Cabeçalho -->
+    <header class="menu_container flex">
+        <div id="header_content" class="menu_content">
              <div id="menu_content_sucess">
-
-                <!-- Hyperlink -->
-                <a href="#">Universe</a>
-
+                <a href="./index.html">Universe</a>
             </div>
-
         </div>
     </header>
-
-    <!-- Seção Principal da Página (main) -->
     <main>
-
-        <!-- Seção Home -->
         <section id="home">
-            <!-- Texto da Seção Home -->
             <article id="home_texto">
                 <h1>E-mail enviado com Sucesso!</h1>
+                <img src="./assets/img/email-mail-svgrepo-com.svg" alt="" width="100px">
                 <h4>Obrigado por entrar em contato, logo mais retornarei sua mensagem!</h4>
-                <a href="index.html">Voltar</a>
+                <a href="index.html" class="botao botao_success">Voltar</a>
             </article>
         </section>
-
     </main>
-
-    <!-- Rodapé da Página (footer) -->
     <footer>
         Feito com 🧡 por Generation Brasil - 2024
     </footer>
-
 </body>
-
 </html>
